# UAV-Based-Charging-Solution

./: README.md
archive/eagle-files/: design1.b#1  design1.b#4  design1.s#1  design1.s#2
archive/ibeacon/: ibeacon.code-workspace  prj.conf
archive/kicad/: _autosave-design1.kicad_sch  design1.kicad_pro  fp-lib-table
archive/kicad-pcb-files/: kicad-pcb-files.kicad_sch
archive/observer/: observer.code-workspace
archive/wpt-receiver/: CMakeLists.txt
eagle-files/: design1.b#2  design1.b#5  design1.b#8  design1.brd  design1.s#3  design1.s#4  design1.s#5  design1.s#7  design1.s#9
firmware/logger-unit/: CMakeLists.txt  prj.conf
firmware/power-receiving-unit/: CMakeLists.txt  power-receiving-unit.code-workspace  prj.conf
firmware/power-receiving-unit/boards/: nrf52832_pru.overlay
firmware/power-receiving-unit/src/: main.c
firmware/power-receiving-unit/src/adc_update/: adc_update.c  adc_update.h
firmware/power-receiving-unit/src/advertisement/: advertisement.c  advertisement.h
firmware/power-receiving-unit/src/gpio_control/: gpio_control.c  gpio_control.h
firmware/power-receiving-unit/src/state_machine/: state_machine.c  state_machine.h
firmware/power-transmitting-unit/: CMakeLists.txt  prj.conf
hardware/: README.md
kicad/: #auto_saved_files#  _autosave-design1_2.kicad_sch  design1-eagle-import.kicad_sym  design1.kicad_prl  fp-info-cache  sym-lib-table
kicad-pcb-files/: kicad-pcb-files.kicad_prl  kicad-pcb-files.kicad_pro
observer/: observer.code-workspace
observer/src/: main.c  (+1 more)
wpt-receiver/: sample.yaml  wpt-receiver.code-workspace
(+315 files in other folders)
